# gh-triage

./: Cargo.toml  README.md  config.example.toml  spec.md
src/: config.rs  daemon.rs  db.rs  github.rs  main.rs  notify.rs  setup.rs  summary.rs  tui.rs  types.rs  waybar.rs
