[package]
name = "gh-triage"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
ratatui = "0.28"
crossterm = "0.28"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
open = "5"
